--- a/Index9.html
+++ b/Index9.html
@@ -665,7 +665,7 @@
             <p style="font-size: 16px; color: #B8BAB7; margin-bottom: 14px;">
               Get exclusive updates, content & early access direct from author Daren Prince.
             </p>
-            <form id="subscribe-form" novalidate>
+            <form id="subscribe-form" action="/thank-you.html" method="POST" novalidate>
               <input type="email" name="email" placeholder="Email address" aria-label="Your email address" style="..." required />
               <button type="submit" style="...">Join →</button>
             </form>
