--- a/press-kit.html
+++ b/press-kit.html
@@ -45,293 +45,7 @@
       "datePublished": "2024-01-15" /* OPTIONAL: The original publication date of the press kit (YYYY-MM-DD) */
     }
     </script>
-    <style>
-        /* General body styling inherited from index.html's inline styles */
-        html, body {
-            height: 100%;
-            margin: 0;
-            padding: 0;
-            overflow-x: hidden; /* Prevent horizontal scroll from any element */
-        }
-        body {
-            font-family: 'Helvetica Neue', sans-serif;
-            color: #FDFDFD;
-            background: url('bg.jpg') no-repeat center top fixed; /* Match index.html background */
-            background-size: cover;
-            background-color: #070A06;
-            display: flex;
-            flex-direction: column;
-        }
-
-        /* Loader - Copied from index.html */
-        #loader {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100vw;
-            height: 100vh;
-            background-color: #0A0A0A;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            z-index: 9999;
-            transition: opacity 0.8s ease;
-        }
-        #loader img {
-            width: 280px;
-            max-width: 80%;
-            animation: pulse 2s infinite ease-in-out;
-        }
-        @keyframes pulse {
-            0%, 100% { transform: scale(1); opacity: 1; }
-            50% { transform: scale(1.05); opacity: 0.75; }
-        }
-
-        /* --- HEADER STYLES (MATCH YOUR MAIN SITE'S HEADER) --- */
-        /* Copied from index.html's inline styles */
-        .header-nav {
-            background-color: #212121;
-            box-shadow: 1px 1px 4px 0 rgba(0,0,0,.1);
-            position: sticky;
-            top: 0;
-            width: 100%;
-            z-index: 3;
-            padding: 15px 20px;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            box-sizing: border-box;
-            min-height: 70px;
-        }
-        .header-nav .logo img {
-            max-width: 100px;
-            height: auto;
-            display: block;
-            padding: 0;
-        }
-        /* Menu Button Styles (Hamburger) - Copied from index.html */
-        .menu-btn { display: none; }
-        .menu-icon { cursor: pointer; display: none; padding: 10px; position: relative; user-select: none; z-index: 5; }
-        .menu-icon .navicon { background: #FDFDFD; display: block; height: 2px; position: relative; transition: background .2s ease-out; width: 20px; }
-        .menu-icon .navicon:before, .menu-icon .navicon:after { background: #FDFDFD; content: ''; display: block; height: 100%; position: absolute; transition: all .2s ease-out; width: 100%; }
-        .menu-icon .navicon:before { top: 6px; }
-        .menu-icon .navicon:after { top: -6px; }
-        /* Hamburger Animation - Copied from index.html */
-        .menu-btn:checked ~ .menu-icon .navicon { background: transparent; }
-        .menu-btn:checked ~ .menu-icon .navicon:before { transform: rotate(-45deg); top: 0; }
-        .menu-btn:checked ~ .menu-icon .navicon:after { transform: rotate(45deg); top: 0; }
-        /* Main Navigation List (Desktop) - Copied from index.html */
-        .menu { margin: 0; padding: 0; list-style: none; overflow: hidden; background-color: #212121; display: flex; align-items: center; height: auto; position: relative; top: auto; left: auto; width: auto; transform: translateX(0); }
-        .menu li a { display: block; padding: 15px 20px; text-decoration: none; color: #D5D5D5; font-family: 'Urbanist', sans-serif;
-            font-weight: 500; /* Lighter font weight for nav */
-            transition: background-color 0.3s ease, color 0.3s ease; }
-        .menu li a:hover { background-color: #070A06; color: #C2E9C1; }
-        /* Active Page Styling - Copied from index.1html */
-        .menu li a.active-page { color: #C2E9C1; font-weight: 800; }
-        /* === END NEW NAVIGATION STYLES === */
-
-        /* Specific header for this page, below the navigation */
-        .page-intro-header {
-            text-align: center;
-            padding: 20px;
-        }
-        .page-intro-header h1 {
-            font-family: 'Urbanist', sans-serif;
-            font-weight: 800; /* Bold font weight for all headings */
-            color: #B8BAB7;
-            text-align: center;
-            font-size: 18px;
-            letter-spacing: 1px;
-            text-transform: uppercase;
-            margin-bottom: 10px;
-        }
-        .page-intro-header p {
-            text-align: center;
-            max-width: 700px;
-            margin: 0 auto 40px;
-            font-size: 15px;
-            color: #D5D5D5;
-            line-height: 1.6;
-        }
-
-
-        /* --- PDF CONTAINER & EMBED STYLES --- */
-        .pdf-container {
-            flex-grow: 1; /* Allows the container to take up available space */
-            position: relative; /* Essential for positioning the download button */
-            width: 100%;
-            display: flex; 
-            justify-content: center; /* Centers the iframe horizontally */
-            align-items: center; /* Centers the iframe vertically within its available space */
-            overflow: hidden; /* Hides any content that overflows the container */
-            background-color: #f0f0f0; /* Light background for the PDF area */
-            padding: 40px 20px; /* Padding above and below the PDF, adjusted for better spacing */
-            box-sizing: border-box; /* Include padding in width/height calculation */
-        }
-
-        .pdf-embed {
-            width: 100%; /* Take full width of container */
-            max-width: 900px; /* Max width for readability, matches index main content */
-            height: 80vh; /* Adjust height relative to viewport height */
-            border: none;
-            box-shadow: 0 4px 8px rgba(0,0,0,0.1); /* Subtle shadow for the embed */
-        }
-
-        /* --- FLOATING DOWNLOAD BUTTON STYLES (UPDATED COLORS) --- */
-        .download-button-wrapper {
-            position: absolute;
-            top: 60px; /* Adjusted to be below the main nav, above the PDF */
-            left: 50%;
-            transform: translateX(-50%); /* Centers the button horizontally */
-            z-index: 10; /* Ensures the button is above the PDF */
-            white-space: nowrap; /* Prevents button text from wrapping */
-        }
-
-        .download-button {
-            display: inline-block;
-            background-color: #456F3A; /* Matches the .download-btn from index.html */
-            color: #FDFDFD; /* Matches the .download-btn from index.html */
-            padding: 12px 25px;
-            text-decoration: none;
-            border-radius: 5px;
-            font-weight: 500; /* Lighter font weight for buttons */
-            transition: background-color 0.3s ease, transform 0.2s ease;
-            box-shadow: 0 2px 5px rgba(0,0,0,0.2); /* Button shadow */
-        }
-
-        .download-button:hover {
-            background-color: #3A5F30; /* Darker shade on hover, consistent with index.html .download-btn:hover */
-            transform: translateY(-2px); /* Slight lift effect on hover */
-        }
-
-        /* --- FOOTER STYLES (MATCH YOUR MAIN SITE'S FOOTER) --- */
-        /* Copied from index.html's inline styles */
-        footer {
-            flex-shrink: 0;
-            background: linear-gradient(to bottom, #212121 0%, #0A0A0A 40%, #070A06 100%);
-            color: #D5D5D5;
-            padding: 60px 20px 30px;
-            font-family: 'Helvetica Neue', sans-serif;
-        }
-
-        .footer-tagline {
-            text-align: center;
-            padding: 16px 0;
-            margin-bottom: 25px;
-        }
-
-        .footer-tagline img {
-            width: 400px;
-            max-width: 90%;
-            height: auto;
-            display: block;
-            margin-left: auto;
-            margin-right: auto;
-            padding: 10px 0;
-        }
-
-        footer h4 {
-            font-size: 14px;
-            text-transform: uppercase;
-            font-weight: 800; /* Bold font weight */
-            margin-bottom: 16px;
-            font-family: 'Urbanist', sans-serif;
-            text-align: left;
-        }
-        
-        footer div:nth-child(4) h4 {
-            text-align: center;
-        }
-
-        .footer-icons {
-            display: flex;
-            justify-content: center;
-            flex-wrap: wrap;
-            gap: 20px;
-            margin-top: 16px;
-        }
-
-        .footer-icons img {
-            width: 24px;
-            height: 24px;
-            opacity: 0.9;
-            transition: transform 0.2s ease;
-        }
-
-        .footer-icons img:hover {
-            transform: scale(1.1);
-        }
-
-        /* NEW: Styles for Bookstore Logos in Footer */
-        .bookstore-logos {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            gap: 25px; /* Spacing between logos */
-            margin-top: 30px; /* Space above this section */
-            margin-bottom: 20px; /* Space below this section */
-            flex-wrap: wrap; /* Allow wrapping on smaller screens */
-            max-width: 80%; /* Total max width of the whole row */
-            margin-left: auto; /* Center the row */
-            margin-right: auto; /* Center the row */
-        }
-
-        .bookstore-logos a {
-            height: 32px; /* Set a consistent height for all logos */
-            display: flex; /* Use flex to center image if it doesn't fill height */
-            align-items: center;
-            justify-content: center;
-            flex-shrink: 0; /* Prevent shrinking below intended size */
-            transition: transform 0.2s ease, opacity 0.2s ease;
-        }
-
-        .bookstore-logos a img {
-            max-height: 100%; /* Ensure image fits within defined height */
-            max-width: 100%; /* Prevent stretching, maintain aspect ratio */
-            width: auto; /* Allow auto width based on height and aspect ratio */
-            height: auto; /* Allow auto height based on max-height */
-            opacity: 0.9;
-        }
-
-        .bookstore-logos a:hover {
-            transform: scale(1.05);
-            opacity: 1;
-        }
-
-
-        /* Media Queries for Responsiveness */
-        @media (max-width: 600px) {
-            .file-entry { flex-direction: row; align-items: flex-start; text-align: left; }
-            .file-entry img { margin-bottom: 0; }
-            .buttons { justify-content: flex-start; flex-direction: row; flex-wrap: nowrap; gap: 12px; }
-            .btn { min-width: unset; flex-grow: 0; flex-basis: auto; }
-            footer h4 { margin-top: 0 !important; }
-            form { flex-direction: column !important; align-items: stretch !important; }
-            form input, form button { width: 100%; max-width: none; margin-bottom: 10px; box-sizing: border-box; }
-            form button { margin-bottom: 0; }
-
-            /* Mobile Nav specific styles - Copied from index.html */
-            .menu-icon { display: block; }
-            .menu { position: fixed; top: 0; left: 0; width: 250px; height: 100%; background-color: #313131; flex-direction: column; justify-content: flex-start; align-items: center; padding-top: 80px; transition: transform 0.3s ease-out; transform: translateX(-100%); box-sizing: border-box; z-index: 4; }
-            .menu-btn:checked ~ .menu { transform: translateX(0); }
-            .menu li { width: 100%; text-align: center; margin-bottom: 5px; }
-            .menu li a { padding: 15px 20px; width: 100%; box-sizing: border-box; }
-            .menu-btn:checked ~ body::after { content: ''; position: fixed; top: 0; left: 0; width: 100vw; height: 100vh; background-color: rgba(0, 0, 0, 0.5); z-index: 2; }
-            /* NEW: Mobile Styles for Bookstore Logos in Footer */
-            .bookstore-logos {
-                flex-direction: column; /* Stack vertically */
-                gap: 15px; /* Adjust vertical spacing */
-            }
-            .bookstore-logos a {
-                width: 45%; /* 45% width for each item */
-                height: auto; /* Auto height on mobile */
-            }
-            .bookstore-logos a img {
-                width: 100%; /* Image takes full width of its container */
-                height: auto;
-            }
-        }
-    </style>
+    <link rel="stylesheet" href="styles/main.css">
 </head>
 <body>
 
@@ -343,8 +57,8 @@
     <a href="https://www.darenprince.com" class="logo">
       <img src="logo-white.png" alt="Daren Prince Official Logo" /> </a>
     <input class="menu-btn" type="checkbox" id="menu-btn" />
-    <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
-    <ul class="menu">
+    <label for="menu-btn" class="menu-icon" aria-label="Toggle navigation menu" aria-expanded="false" aria-controls="menu-list"><span class="navicon"></span></label>
+    <ul id="menu-list" class="menu">
       <li><a href="https://www.darenprince.com/bio">Bio</a></li>
       <li><a href="https://www.darenprince.com/books">Books</a></li>
       <li><a href="mailto:press@darenprince.com">Press</a></li>
@@ -352,6 +66,8 @@
       <li><a href="mailto:contact@darenprince.com">Contact</a></li>
     </ul>
   </nav>
+
+  <div class="mobile-menu-overlay"></div>
 
   <header>
     <h1>Download Center</h1>
