--- a/thank-you.html
+++ b/thank-you.html
@@ -45,648 +45,7 @@
 
 
 
-  <style>
-    html, body {
-      height: 100%;
-      margin: 0;
-      padding: 0;
-      overflow-x: hidden;
-    }
-
-    body {
-      font-family: 'Helvetica Neue', sans-serif;
-      color: #FDFDFD;
-      background: url('bg.jpg') no-repeat center top fixed;
-      background-size: cover;
-      background-color: #070A06;
-      display: flex;
-      flex-direction: column;
-      min-height: 100vh;
-    }
-
-    /* Loader */
-    #loader {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100vw;
-      height: 100vh;
-      background-color: #0A0A0A;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      z-index: 9999;
-      transition: opacity 1.0s ease;
-    }
-
-header h1 {
-  font-family: 'Urbanist', sans-serif;
-  font-weight: 800;
-  font-size: 24px;
-  color: #C2E9C1;
-  margin-top: 10px;
-  text-transform: uppercase;
-  letter-spacing: 1px;
-}
-
-.intro-text {
-  font-size: 16px;
-  line-height: 1.6;
-  color: #D5D5D5;
-  max-width: 720px;
-  margin: 0 auto;
-}
-
-a.btn.view-btn {
-  background-color: #C2E9C1;
-  color: #070A06;
-  font-weight: 700;
-  font-size: 14px;
-  padding: 12px 22px;
-  border-radius: 5px;
-  transition: all 0.3s ease-in-out;
-  text-transform: uppercase;
-  text-decoration: none;
-}
-
-a.btn.view-btn:hover {
-  background-color: #A0D39F;
-}
-
-
-    #loader img {
-      width: 300px;
-      max-width: 80%;
-      margin-bottom: 50px;
-      animation: pulse 1.5s infinite ease-in-out;
-    }
-
-    @keyframes pulse {
-      0%, 100% { transform: scale(0.95); opacity: 1; }
-      50% { transform: scale(1.05); opacity: 0.75; }
-    }
-
-    /* Styles for the Glowing Loader Ring */
-    .ring {
-      position: relative;
-      width: 100px; /* UPDATED: Half size */
-      height: 100px; /* UPDATED: Half size */
-      border: 0px solid #000;
-      border-radius: 50%;
-      text-align: center;
-      line-height: 100px; /* UPDATED: Half size */
-      font-size: 10px; /* UPDATED: Half size */
-      color: #87BD72;
-      text-shadow: 0 0 10px #87BD72;
-      box-shadow: 0 0 20px rgba(135, 189, 114, 0.5);
-      overflow: hidden;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      white-space: nowrap;
-    }
-
-    .ring:before {
-      content: '';
-      position: absolute;
-      top: -1.5px; /* UPDATED: Half size */
-      left: -1.5px; /* UPDATED: Half size */
-      width: 100%;
-      height: 100%;
-      border: 2px solid transparent; /* UPDATED: Adjusted border thickness */
-      border-top: 2px solid #87BD72; /* UPDATED: Adjusted border thickness */
-      border-right: 2px solid #87BD72; /* UPDATED: Adjusted border thickness */
-      border-radius: 50%;
-      animation: animateC 2s linear infinite;
-    }
-
-    .ring span {
-      display: block;
-      position: absolute;
-      top: calc(50% - 1px); /* UPDATED: Half size */
-      left: 50%;
-      width: 50%;
-      height: 2px; /* UPDATED: Half size */
-      background: transparent;
-      transform-origin: left;
-      animation: animate 2s linear infinite;
-    }
-
-    .ring span:before {
-      content: '';
-      position: absolute;
-      top: -3px; /* UPDATED: Half size */
-      right: 0;
-      width: 8px; /* UPDATED: Half size */
-      height: 8px; /* UPDATED: Half size */
-      border-radius: 50%;
-      background: #87BD72;
-      box-shadow: 0 0 20px #87BD72;
-    }
-
-    @keyframes animateC {
-      0% {
-        transform: rotate(0deg);
-      }
-      100% {
-        transform: rotate(360deg);
-      }
-    }
-
-    @keyframes animate {
-      0% {
-        transform: rotate(45deg);
-      }
-      100% {
-        transform: rotate(405deg);
-      }
-    }
-
-
-    /* === NAVIGATION STYLES === */
-    .header-nav {
-      background-color: #212121;
-      box-shadow: 1px 1px 4px 0 rgba(0,0,0,.1);
-      position: sticky;
-      top: 0;
-      width: 100%;
-      z-index: 3;
-      padding: 18px 22px;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      box-sizing: border-box;
-      min-height: 70px;
-    }
-
-    .header-nav .logo img {
-      max-width: 110px;
-      height: auto;
-      display: block;
-      padding: 0;
-      padding-top: 10;
-    }
-
-    .header-nav .tagline {
-      font-family: 'Urbanist', sans-serif;
-      font-weight: 800;
-      text-transform: uppercase;
-      color: #587F53;
-      font-size: 16px;
-      margin-left: 25px;
-      white-space: nowrap;
-    }
-
-    .logo-and-tagline {
-      display: flex;
-      align-items: center;
-    }
-
-    /* Menu Button Styles (Hamburger) */
-    .menu-btn {
-      display: none;
-    }
-
-    .menu-icon {
-      cursor: pointer;
-      display: none;
-    }
-
-    .menu-icon .navicon {
-      background: #FDFDFD;
-      display: block;
-      height: 4px;
-      position: relative;
-      transition: background .4s ease-out;
-      width: 20px;
-    }
-
-    .menu-icon .navicon:before,
-    .menu-icon .navicon:after {
-      background: #FDFDFD;
-      content: '';
-      display: block;
-      height: 100%;
-      position: absolute;
-      transition: all .4s ease-out;
-      width: 100%;
-    }
-
-    .menu-icon .navicon:before {
-      top: 6px;
-    }
-
-    .menu-icon .navicon:after {
-      top: 8px;
-    }
-
-    /* Hamburger Animation */
-    .menu-btn:checked ~ .menu-icon .navicon {
-      background: transparent;
-    }
-
-    .menu-btn:checked ~ .menu-icon .navicon:before {
-      transform: rotate(-45deg);
-      top: 0;
-    }
-
-    .menu-btn:checked ~ .menu-icon .navicon:after {
-      transform: rotate(45deg);
-      top: 0;
-    }
-
-    /* Main Navigation List (Desktop) */
-    .menu {
-      margin: 0;
-      padding: 0;
-      list-style: none;
-      overflow: hidden;
-      background-color: transparent;
-      display: flex;
-      align-items: center;
-      height: auto;
-      position: relative;
-      top: auto;
-      left: auto;
-      width: auto;
-      transform: translateX(0);
-    }
-
-    .menu li a {
-      display: block;
-      padding: 18px 20px;
-      text-decoration: none;
-      color: #D5D5D5;
-      font-family: 'Urbanist', sans-serif;
-      font-weight: 800;
-      text-transform: uppercase;
-      font-size: 14px;
-      transition: background-color 0.4s ease, color 0.3s ease;
-    }
-
-    .menu li a:hover {
-      background-color: #070A06;
-      color: #C2E9C1;
-    }
-
-    /* Active Page Styling */
-    .menu li a.active-page {
-      color: #C2E9C1;
-      font-weight: 800;
-    }
-
-    /* === END NAVIGATION STYLES === */
-
-    header {
-      text-align: center;
-      padding: 20px;
-      flex: 1;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      min-height: 220px;
-    }
-
-    header img {
-      display: none;
-    }
-
-    h1, h2, h3, h4, h5, h6 {
-      font-family: 'Urbanist', sans-serif;
-      font-weight: 800;
-      color: #B8BAB7;
-    }
-
-    h1 {
-      text-align: center;
-      font-size: 19px;
-      letter-spacing: 1px;
-      text-transform: uppercase;
-      margin-bottom: 15px;
-    }
-
-    .intro-text {
-      text-align: center;
-      max-width: 700px;
-      margin: 0 auto 20px;
-      font-size: 15px;
-      color: #D5D5D5;
-      line-height: 1.5;
-    }
-
-    main {
-      padding: 40px 20px;
-      max-width: 870px;
-      margin: 0 auto;
-      flex: 0 0 auto;
-      box-sizing: border-box;
-    }
-
-    .file-entry {
-      background-color: #212121;
-      border-radius: 8px;
-      padding: 20px;
-      display: flex;
-      align-items: flex-start;
-      gap: 20px;
-      flex-wrap: nowrap;
-      text-align: left;
-      border: 1px solid rgba(194, 233, 193, 0.5);
-      box-shadow: 0 0 13px rgba(194, 233, 193, 0.2);
-      margin-bottom: 40px;
-    }
-
-    .file-entry img {
-      max-width: 65px;
-      height: auto;
-      border-radius: 3px;
-      flex-shrink: 0;
-      align-self: flex-start;
-    }
-
-    .file-meta {
-      flex: 1;
-    }
-
-    .file-entry a {
-        text-decoration: none;
-        color: inherit;
-    }
-
-    .file-name a {
-        color: #B8BAB7;
-    }
-
-    .file-name {
-      font-family: 'Urbanist', sans-serif;
-      font-weight: 700;
-      margin-bottom: 10px;
-      cursor: pointer;
-    }
-    .file-name:hover {
-        color: #8CD679;
-    }
-
-
-    .buttons {
-      display: flex;
-      gap: 12px;
-      flex-wrap: nowrap;
-    }
-
-    .btn {
-      padding: 10px 18px;
-      text-decoration: none;
-      border-radius: 5px;
-      text-align: center;
-      font-family: 'Urbanist', sans-serif;
-      font-weight: 700;
-      white-space: nowrap;
-      transition: background-color 0.5s ease, color 0.5s ease;
-    }
-
-    a.btn.view-btn {
-      background-color: #C2E9C1;
-      color: #070A06;
-    }
-    a.btn.view-btn:hover {
-        background-color: #A0D39F;
-    }
-
-    .download-btn {
-      background-color: #456F3A;
-      color: #FDFDFD;
-    }
-    .download-btn:hover {
-        background-color: #3A5F30;
-    }
-
-
-    footer {
-      flex-shrink: 0;
-      color: #D5D5D5;
-      padding: 0;
-      font-family: 'Helvetica Neue', sans-serif;
-      overflow: hidden;
-      margin-bottom: 100px;
-    }
-
-    /* Styles for the main footer content area */
-    .footer-main-content {
-        background-color: #313131;
-        padding: 50px 20px;
-    }
-
-    /* Styles for the very bottom copyright/links bar */
-    .footer-bottom-bar {
-        background-color: #1f1f1f;
-        padding: 27px 20px;
-        margin-top: 0px;
-        margin-bottom: 40px;
-    }
-    /* Media Queries for Responsiveness */
-    @media (max-width: 1280px) {
-        body {
-            background-image: url('bg-mobile.jpg');
-            background-size: cover;
-            background-position: center top;
-            background-attachment: fixed;
-        }
-
-    /* Helper class to center content within full-width sections */
-    .content-wrapper {
-        max-width: 1280px;
-        margin-left: auto;
-        margin-right: auto;
-    }
-
-    /* Moved tagline image styling */
-    .footer-tagline-moved {
-        text-align: center;
-        padding: 15px 0;
-    }
-
-    .footer-tagline-moved img {
-        width: 300px;
-        max-width: 70%;
-        height: auto;
-        display: block;
-        margin-left: auto;
-        margin-right: auto;
-    }
-
-
-    footer h4 {
-      font-size: 18px;
-      text-transform: uppercase;
-      margin-bottom: 17px;
-      font-family: 'Urbanist', sans-serif;
-      font-weight: 800;
-      text-align: left;
-    }
-
-    .footer-icons {
-      display: flex;
-      justify-content: center;
-      flex-wrap: wrap;
-      gap: 22px;
-      margin-top: 18px;
-      margin-bottom: 22px;
-    }
-
-    .footer-icons img {
-      width: auto;
-      height: 23px;
-      opacity: 0.9;
-      transition: transform 0.4s ease;
-    }
-
-    .footer-icons img:hover {
-      transform: scale(1.2);
-    }
-
-    /* Styles for Bookstore Logos in Footer */
-    .bookstore-logos {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      gap: 28px;
-      margin-top: 17px;
-      margin-bottom: 69px;
-      flex-wrap: wrap;
-    }
-
-    .bookstore-logos a {
-      height: 30px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      flex-shrink: 0;
-      transition: transform 0.4s ease, opacity 0.3s ease;
-    }
-
-    .bookstore-logos a img {
-      max-height: 100%;
-      max-width: 100%;
-      width: auto;
-      height: auto;
-      opacity: 0.9;
-    }
-
-    .bookstore-logos a:hover {
-      transform: scale(1.1);
-      opacity: 1;
-    }
-
-
-    /* Transparent black overlay for mobile menu */
-    .mobile-menu-overlay {
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100vw;
-        height: 100vh;
-        background-color: rgba(0, 0, 0, 0.6);
-        z-index: 2;
-        display: none;
-        transition: background-color 0.4s ease;
-    }
-
-
-    /* Media Queries for Responsiveness */
-    @media (max-width: 600px) {
-      .file-entry {
-        flex-direction: row;
-        align-items: flex-start;
-        text-align: left;
-      }
-      .file-entry img {
-        margin-bottom: 0;
-      }
-      .buttons {
-        justify-content: flex-start;
-        flex-direction: row;
-        flex-wrap: nowrap;
-        gap: 12px;
-      }
-      .btn {
-        min-width: unset;
-        flex-grow: 0;
-        flex-basis: auto;
-      }
-
-      /* Mobile Nav specific styles */
-      .menu-icon {
-        display: block;
-      }
-      .header-nav .logo-and-tagline {
-        justify-content: flex-start;
-        width: 100%;
-      }
-      .header-nav .tagline {
-        display: block;
-        font-size: 16px;
-        margin-left: 16px;
-        margin-right: auto;
-      }
-
-      .menu {
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 300px;
-        height: 100%;
-        background-color: #2f2f2f;
-        flex-direction: column;
-        justify-content: flex-start;
-        align-items: center;
-        padding-top: 80px;
-        transition: transform 0.4s ease-out;
-        transform: translateX(-100%);
-        box-sizing: border-box;
-        z-index: 4;
-      }
-
-      /* Footer adjustments for mobile */
-      footer h4 {
-        margin-top: 0 !important;
-      }
-
-
-      /* Ensure form items stack on mobile */
-      form {
-        flex-direction: column !important;
-        align-items: stretch !important;
-      }
-
-      form input,
-      form button {
-        width: 100%;
-        height: 50px;
-        max-width: none;
-        margin-bottom: 6px;
-        box-sizing: border-box;
-      }
-
-
-
-      /* Mobile Styles for Bookstore Logos in Footer */
-      .bookstore-logos {
-        flex-direction: column;
-        gap: 20px;
-      }
-      .bookstore-logos a {
-        width: auto;
-        height: 65px;
-      }
-      .bookstore-logos a img {
-        width: auto;
-        height: 65px;
-      }
-    }
-  </style>
+  <link rel="stylesheet" href="styles/main.css">
 </head>
 <body>
 
@@ -706,8 +65,8 @@ a.btn.view-btn:hover {
       <span class="tagline">IT'S TIME TO LEVEL UP!</span>
     </div>
     <input class="menu-btn" type="checkbox" id="menu-btn" />
-    <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
-    <ul class="menu">
+    <label for="menu-btn" class="menu-icon" aria-label="Toggle navigation menu" aria-expanded="false" aria-controls="menu-list"><span class="navicon"></span></label>
+    <ul id="menu-list" class="menu">
       <li><a href="https://darenprince.com/#page-0">Bio</a></li>
       <li><a href="https://darenprince.com/#page-1">Books</a></li>
       <li><a href="https://files.darenprince.com">Press</a></li>
