--- a/thank-you.html
+++ b/thank-you.html
@@ -3,6 +3,7 @@
 <head>
   <script src="force-https.js"></script>
   <meta charset="UTF-8" />
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>You’re In! | Daren Prince</title>
   <link rel="icon" type="image/png" href="favicon.png" />
